# codex-token-count

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py
docs/: api.md  cli.md  statistics.md
src/codex_token/: cli.py  models.py
src/codex_token/analytics/: summary.py
src/codex_token/datasource/: __init__.py  loader.py  session_jsonl_reader.py  sqlite_reader.py
src/codex_token/presenters/: __init__.py  rich_console.py
src/codex_token_count/: cli.py  config.py  paths.py
src/codex_token_count/analytics/: __init__.py  pricing.py  projects.py  summary.py  trends.py  usage.py
src/codex_token_count/presenters/: rich_console.py
tests/: test_analytics.py  test_cli.py  test_readers.py
