[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-token"
version = "0.1.0"
description = "CLI for analyzing local Codex token usage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
]

[project.scripts]
codex-token = "codex_token.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
